# tawasuyu

./: .gitignore  APPS-NATIVAS.md  APPS.md  AUDITORIA-ARQUITECTURA.md  BRAHMAN.md  CIERRE.md  CLAUDE.md  COLA-VERIFICACION.md  CONTRIBUTING.md  Cargo.toml  DESACOPLE.md  HANDOFF_CUELGUE_LLIMPHI.md  INVENTARIO_APPS.md  LEEME.md  LICENSE-MIT  LICENSE.md  MIGRACION-TAWASUYU.md  PLAN.md  README.md  READMES_FUENTE.md  UNIFICACION.md  WAWA.md  bench.md  nohup.out
00_unanchay/: LEEME.md  README.md  (+1 more)
02_ruway/cards/: Cargo.toml  LEEME.md  README.md
02_ruway/cards/src/: entity_loader.rs
02_ruway/cards/templates/: ente_basic.ncl
02_ruway/cards/tests/: nickel.rs
02_ruway/gioser-edit/: Cargo.toml
02_ruway/gioser-edit/src/: main.rs
02_ruway/nada/: Cargo.toml  LEEME.md  README.md  README.qu.md
02_ruway/nada/examples/: pantallazo_nada.rs
02_ruway/nada/src/: actions.rs  clipboard.rs  fsutil.rs  keys.rs  main.rs  prelude.rs  session.rs  settings.rs  update.rs  view.rs
03_ukupacha/wawa/: Cargo.toml  LEEME.md  README.md  README.qu.md  SDD-capacidades.md  flashear-gop-probe.sh
03_ukupacha/wawa/apps/asistente/: Cargo.toml
03_ukupacha/wawa/apps/asistente/src/: lib.rs
03_ukupacha/wawa/apps/ayni/: Cargo.toml
03_ukupacha/wawa/apps/ayni/src/: lib.rs
03_ukupacha/wawa/apps/bitacora/: Cargo.toml  README.md
03_ukupacha/wawa/apps/bitacora/src/: lib.rs
03_ukupacha/wawa/apps/cronista/: Cargo.toml  README.md
03_ukupacha/wawa/apps/cronista/src/: lib.rs
03_ukupacha/wawa/apps/cuaderno/: Cargo.toml
03_ukupacha/wawa/apps/cuaderno/src/: lib.rs
03_ukupacha/wawa/apps/discola/: Cargo.toml  LEEME.md  README.md
03_ukupacha/wawa/apps/discola/src/: lib.rs
03_ukupacha/wawa/apps/glotona/: Cargo.toml  LEEME.md  README.md
03_ukupacha/wawa/apps/glotona/src/: lib.rs
03_ukupacha/wawa/apps/hello_wasm/: Cargo.toml  README.md
03_ukupacha/wawa/apps/ide/: Cargo.toml
03_ukupacha/wawa/apps/memoriosa/: Cargo.toml  README.md
03_ukupacha/wawa/apps/mudanza/: Cargo.toml  LEEME.md  README.md
03_ukupacha/wawa/apps/pluma/: Cargo.toml  README.md
03_ukupacha/wawa/apps/pregon/: Cargo.toml  README.md
03_ukupacha/wawa/apps/pulso/: Cargo.toml  README.md
03_ukupacha/wawa/apps/rimay/: Cargo.toml  LEEME.md  README.md
03_ukupacha/wawa/apps/testigo/: Cargo.toml
03_ukupacha/wawa/apps/tinkuy/: Cargo.toml
03_ukupacha/wawa/apps/tonada/: Cargo.toml  README.md
03_ukupacha/wawa/apps/tonalero/: Cargo.toml  README.md
03_ukupacha/wawa/gop-probe/: Cargo.toml
03_ukupacha/wawa/gop-probe/src/: main.rs
03_ukupacha/wawa/wawa-boot/: Cargo.toml  README.md
03_ukupacha/wawa/wawa-boot/src/: main.rs
03_ukupacha/wawa/wawa-fs/: Cargo.toml  LEEME.md  README.md
03_ukupacha/wawa/wawa-fs/src/: lib.rs
03_ukupacha/wawa/wawa-kernel/: Cargo.toml  LEEME.md  README.md
03_ukupacha/wawa/wawa-kernel/assets/: app.wasm  asistente.wasm  ayni.wasm  bitacora.wasm  cronista.wasm  discola.wasm  glotona.wasm  ide.wasm  memoriosa.wasm  mudanza.wasm  pluma.wasm  pregon.wasm  pulso.wasm  rimay.wasm  testigo.wasm  tinkuy.wasm  tonada.wasm  tonalero.wasm
03_ukupacha/wawa/wawa-kernel/src/: akasha.rs  almacen.rs  baliza.rs  claves.rs  compositor.rs  consola.rs  control.rs  gdt.rs  grafico.rs  interrupts.rs  main.rs  manifiesto.rs  pantallas.rs  pic.rs  sync.rs  texto.rs  tinkuy.rs
shared/allichay/: Cargo.toml
shared/allichay/src/: lib.rs
shared/app-bus/: Cargo.toml  LEEME.md  README.md
shared/app-bus/assets/apps/: media.toml  nada.toml
shared/app-bus/src/: lib.rs
shared/app-iconset/: Cargo.toml
shared/app-iconset/src/: lib.rs
shared/apps-desktop/: Cargo.toml
shared/apps-desktop/src/: main.rs
shared/atipay/: Cargo.toml
shared/atipay/examples/: catalogo.rs
shared/atipay/src/: lib.rs  mirada.rs  pacha.rs  sandokan.rs  shuma.rs  sistema.rs
shared/bitacora/: Cargo.toml
shared/bitacora/src/: lib.rs
shared/drop-bridge/: Cargo.toml
shared/drop-bridge/src/: lib.rs
shared/foreign-av/: Cargo.toml  README.md
shared/foreign-av/src/: lib.rs
shared/foreign-docx/: Cargo.toml
shared/foreign-docx/src/: lib.rs
shared/foreign-fs/: Cargo.toml  LEEME.md  README.md
shared/foreign-fs/src/: ext4.rs  fat.rs  fuente_std.rs  lib.rs  particion.rs
shared/foreign-fs/tests/: absorber_fuente.rs  fuente.rs  roundtrip_ext4.rs  roundtrip_fat.rs  roundtrip_particion.rs  stress_ext4.rs
shared/foreign-lottie/: Cargo.toml  README.md
shared/foreign-lottie/src/import/: converters.rs
shared/foreign-lottie/tests/: no_panic_fork.rs
shared/foreign-platform/: Cargo.toml  DECISION.md
shared/foreign-platform/src/: json.rs  lib.rs  model.rs  provider.rs  rest.rs
shared/foreign-platform/src/descriptors/: invidious.ron  peertube.ron
shared/foreign-psd/: Cargo.toml  README.md
shared/foreign-psd/examples/: psd_a_png.rs
shared/foreign-psd/src/: export.rs  lib.rs
shared/foreign-psd/tests/fixtures/: PROVENANCE.md
shared/foreign-svg/: Cargo.toml
shared/foreign-svg/src/: lib.rs
shared/foreign-vox/: Cargo.toml
shared/foreign-vox/src/: lib.rs
shared/foreign-xlsx/: Cargo.toml
shared/foreign-xlsx/src/: lib.rs
shared/foreign-ytdlp/: Cargo.toml
shared/foreign-ytdlp/src/: lib.rs
shared/format/: Cargo.toml  LEEME.md  README.md
shared/format/src/: cable.rs  constantes.rs  firma.rs  grafo.rs  lib.rs  pruebas.rs  tipos.rs
shared/forth-emisor/: Cargo.toml  LEEME.md  README.md
shared/forth-emisor/src/: lib.rs
shared/launcher-core/: Cargo.toml  LEEME.md  README.md
shared/launcher-core/src/: lib.rs
shared/launcher-llimphi/: Cargo.toml  LEEME.md  README.md  launcher.example.toml
shared/launcher-llimphi/examples/: launcher_demo.rs
shared/launcher-llimphi/src/: host.rs  lib.rs
shared/marca/: Cargo.toml
shared/marca/examples/: preview.rs
shared/marca/src/: anim.rs  lib.rs
shared/rag-motor/: Cargo.toml
shared/rag-motor/src/: lib.rs
shared/rimay-localize/: Cargo.toml  LEEME.md  README.md  SDD.md
shared/rimay-localize/examples/: showcase.rs
shared/rimay-localize/locales/: en.ftl  es.ftl  qu.ftl
shared/rimay-localize/src/: lib.rs
shared/ssh/: Cargo.toml  README.md
shared/ssh/src/: lib.rs
(+4563 files in other folders)
