[workspace]
resolver = "2"

# ============================================================
# Cuadrantes — agregar a medida que se migran
# ============================================================
members = [
    # 00_unanchay/ — PERCIBIR
    # 01_yachay/   — CONOCER
    # 02_ruway/    — HACER
    # 03_ukupacha/ — RAÍZ (wawa excluido)
    # shared/, web/
    "00_unanchay/chaka/chaka-app",
    "00_unanchay/chaka/chaka-bcd",
    "00_unanchay/chaka/chaka-codegen",
    "00_unanchay/chaka/chaka-ir",
    "00_unanchay/chaka/chaka-lexer",
    "00_unanchay/chaka/chaka-parser",
    "00_unanchay/chaka/chaka-runtime",
    "00_unanchay/chaka/chaka-shadow",
    "00_unanchay/khipu/khipu-app",
    "00_unanchay/khipu/khipu-core",
    "00_unanchay/khipu/khipu-gravity",
    "00_unanchay/pineal/demos/pineal-demo",
    "00_unanchay/pineal/demos/pineal-financial-demo",
    "00_unanchay/pineal/demos/pineal-phosphor-demo",
    "00_unanchay/pineal/demos/pineal-stream-demo",
    "00_unanchay/pineal/pineal-cartesian",
    "00_unanchay/pineal/pineal-core",
    "00_unanchay/pineal/pineal-export",
    "00_unanchay/pineal/pineal-financial",
    "00_unanchay/pineal/pineal-flow",
    "00_unanchay/pineal/pineal-heatmap",
    "00_unanchay/pineal/pineal-mesh",
    "00_unanchay/pineal/pineal-phosphor",
    "00_unanchay/pineal/pineal-polar",
    "00_unanchay/pineal/pineal-render",
    "00_unanchay/pineal/pineal-stream",
    "00_unanchay/pineal/pineal-treemap",
    "00_unanchay/pineal/pineal-umbrella",
    "00_unanchay/pluma/pluma-app",
    "00_unanchay/pluma/pluma-core",
    "00_unanchay/pluma/pluma-deck-core",
    "00_unanchay/pluma/pluma-deck-web",
    "00_unanchay/pluma/pluma-editor-llimphi",
    "00_unanchay/pluma/pluma-graph",
    "00_unanchay/pluma/pluma-md",
    "00_unanchay/pluma/pluma-md-reader-web",
    "00_unanchay/pluma/pluma-notebook-app",
    "00_unanchay/pluma/pluma-notebook-core",
    "00_unanchay/pluma/pluma-notebook-exec",
    "00_unanchay/pluma/pluma-notebook-kernel-python",
    "00_unanchay/pluma/pluma-notebook-kernel-wasm",
    "00_unanchay/pluma/pluma-notebook-llimphi",
    "00_unanchay/pluma/pluma-notebook-store",
    "00_unanchay/pluma/pluma-render-plan",
    "00_unanchay/pluma/pluma-semantic",
    "00_unanchay/pluma/pluma-store",
    "00_unanchay/rimay/rimay-verbo-core",
    "00_unanchay/rimay/rimay-verbo-daemon",
    "00_unanchay/rimay/rimay-verbo-mock",
    "00_unanchay/puriy/puriy-app",
    "00_unanchay/puriy/puriy-core",
    "00_unanchay/puriy/puriy-engine",
    "00_unanchay/puriy/puriy-llimphi",
    "01_yachay/cosmos/cosmos-app-llimphi",
    "01_yachay/cosmos/cosmos-astrology",
    "01_yachay/cosmos/cosmos-canvas-llimphi",
    "01_yachay/cosmos/cosmos-card",
    "01_yachay/cosmos/cosmos-catalog",
    "01_yachay/cosmos/cosmos-cli",
    "01_yachay/cosmos/cosmos-coords",
    "01_yachay/cosmos/cosmos-core",
    "01_yachay/cosmos/cosmos-corpus",
    "01_yachay/cosmos/cosmos-engine",
    "01_yachay/cosmos/cosmos-ephemeris",
    "01_yachay/cosmos/cosmos-images",
    "01_yachay/cosmos/cosmos-model",
    "01_yachay/cosmos/cosmos-modules",
    "01_yachay/cosmos/cosmos-pointing",
    "01_yachay/cosmos/cosmos-render",
    "01_yachay/cosmos/cosmos-server",
    "01_yachay/cosmos/cosmos-sky",
    "01_yachay/cosmos/cosmos-store",
    "01_yachay/cosmos/cosmos-time",
    "01_yachay/cosmos/cosmos-validation",
    "01_yachay/cosmos/cosmos-wcs",
    "01_yachay/cosmos/cosmos-web",
    "01_yachay/dominium/dominium-app-llimphi",
    "01_yachay/dominium/dominium-canvas-llimphi",
    "01_yachay/dominium/dominium-cli",
    "01_yachay/dominium/dominium-core",
    "01_yachay/dominium/dominium-iso",
    "01_yachay/dominium/dominium-physics",
    "01_yachay/dominium/dominium-render-plan",
    "01_yachay/iniy/iniy-cli",
    "01_yachay/iniy/iniy-core",
    "01_yachay/iniy/iniy-extract",
    "01_yachay/iniy/iniy-graph",
    "01_yachay/iniy/iniy-ingest",
    "01_yachay/iniy/iniy-nli",
    "01_yachay/iniy/iniy-store",
    "01_yachay/nakui/nakui-core",
    "01_yachay/nakui/nakui-explorer-llimphi",
    "01_yachay/nakui/nakui-ui-llimphi",
    "02_ruway/gioser-edit",
    "02_ruway/chasqui/chasqui-broker",
    "02_ruway/chasqui/chasqui-broker-explorer-llimphi",
    "02_ruway/chasqui/chasqui-card",
    "02_ruway/chasqui/chasqui-core",
    "02_ruway/chasqui/chasqui-explorer-llimphi",
    "02_ruway/chasqui/chasqui-nous",
    "02_ruway/chasqui/chasqui-nous-mock",
    "02_ruway/chasqui/chasqui-nous-real",
    "02_ruway/llimphi/llimphi-hal",
    "02_ruway/llimphi/llimphi-raster",
    "02_ruway/llimphi/llimphi-layout",
    "02_ruway/llimphi/llimphi-text",
    "02_ruway/llimphi/llimphi-theme",
    "02_ruway/llimphi/llimphi-ui",
    "02_ruway/llimphi/widgets/app-header",
    "02_ruway/llimphi/widgets/banner",
    "02_ruway/llimphi/widgets/button",
    "02_ruway/llimphi/widgets/card",
    "02_ruway/llimphi/widgets/gallery",
    "02_ruway/llimphi/widgets/list",
    "02_ruway/llimphi/widgets/slider",
    "02_ruway/llimphi/widgets/splitter",
    "02_ruway/llimphi/widgets/stat-card",
    "02_ruway/llimphi/widgets/tabs",
    "02_ruway/llimphi/widgets/theme-switcher",
    "02_ruway/llimphi/widgets/text-area",
    "02_ruway/llimphi/widgets/text-editor",
    "02_ruway/llimphi/widgets/text-editor-lsp",
    "02_ruway/llimphi/widgets/text-input",
    "02_ruway/llimphi/widgets/tiled",
    "02_ruway/llimphi/widgets/tree",
    "02_ruway/llimphi/modules/fif",
    "02_ruway/llimphi/modules/file-picker",
    "02_ruway/llimphi/modules/plugin-host",
    "02_ruway/llimphi/modules/shuma-term",
    "02_ruway/nahual/nahual-shell-llimphi",
    "02_ruway/nahual/nahual-file-explorer-llimphi",
    "02_ruway/nahual/nahual-image-viewer-llimphi",
    "02_ruway/nahual/nahual-text-viewer-llimphi",
    "02_ruway/mirada/mirada-app-llimphi",
    "02_ruway/mirada/mirada-bar-core",
    "02_ruway/mirada/mirada-bar-web",
    "02_ruway/mirada/mirada-body",
    "02_ruway/mirada/mirada-brain",
    "02_ruway/mirada/mirada-compositor",
    "02_ruway/mirada/mirada-ctl",
    "02_ruway/mirada/mirada-greeter",
    "02_ruway/mirada/mirada-launcher",
    "02_ruway/mirada/mirada-layout",
    "02_ruway/mirada/mirada-link",
    "02_ruway/mirada/mirada-portal",
    "02_ruway/mirada/mirada-protocol",
    "02_ruway/nahual/libs/meta-runtime",
    "02_ruway/nahual/libs/meta-schema",
    "02_ruway/shuma/baremetal/matilda-app",
    "02_ruway/shuma/baremetal/matilda-apply",
    "02_ruway/shuma/baremetal/matilda-config",
    "02_ruway/shuma/baremetal/matilda-core",
    "02_ruway/shuma/baremetal/matilda-discover",
    "02_ruway/shuma/baremetal/matilda-ghost",
    "02_ruway/shuma/baremetal/matilda-linker",
    "02_ruway/shuma/baremetal/matilda-plan",
    "02_ruway/shuma/sandbox/shuma-card",
    "02_ruway/shuma/sandbox/shuma-config",
    "02_ruway/shuma/sandbox/shuma-core",
    "02_ruway/shuma/sandbox/shuma-discern",
    "02_ruway/shuma/sandbox/shuma-exec",
    "02_ruway/shuma/sandbox/shuma-history",
    "02_ruway/shuma/sandbox/shuma-infer",
    "02_ruway/shuma/sandbox/shuma-link",
    "02_ruway/shuma/sandbox/shuma-intent",
    "02_ruway/shuma/sandbox/shuma-line",
    "02_ruway/shuma/sandbox/shuma-module",
    "02_ruway/shuma/sandbox/shuma-module-commandbar",
    "02_ruway/shuma/sandbox/shuma-module-launcher",
    "02_ruway/shuma/sandbox/shuma-module-matilda",
    "02_ruway/shuma/sandbox/shuma-module-shell",
    "02_ruway/shuma/sandbox/shuma-protocol",
    "02_ruway/shuma/sandbox/shuma-remote-exec",
    "02_ruway/shuma/sandbox/shuma-session",
    "02_ruway/shuma/sandbox/shuma-shell-render",
    "02_ruway/shuma/sandbox/shuma-sysmon",
    "02_ruway/shuma/shuma-cli",
    "02_ruway/shuma/shuma-shell-llimphi",
    "02_ruway/supay/supay-app-llimphi",
    "02_ruway/supay/supay-core",
    "02_ruway/supay/supay-doom-llimphi",
    "02_ruway/supay/supay-render-llimphi",
    "02_ruway/supay/supay-scene",
    "02_ruway/shuma/shuma-daemon",
    "02_ruway/shuma/shuma-gateway",
    "02_ruway/takiy/takiy-core",
    "03_ukupacha/agora/agora-app",
    "03_ukupacha/agora/agora-core",
    "03_ukupacha/agora/agora-gossip",
    "03_ukupacha/agora/agora-graph",
    "03_ukupacha/agora/agora-store",
    "03_ukupacha/arje/arje-card",
    "03_ukupacha/arje/compat/arje-binfmt-compat",
    "03_ukupacha/arje/compat/arje-compat-common",
    "03_ukupacha/arje/compat/arje-hostnamed-compat",
    "03_ukupacha/arje/compat/arje-journald-compat",
    "03_ukupacha/arje/compat/arje-localed-compat",
    "03_ukupacha/arje/compat/arje-logind-compat",
    "03_ukupacha/arje/compat/arje-machined-compat",
    "03_ukupacha/arje/compat/arje-notify-compat",
    "03_ukupacha/arje/compat/arje-policy-provider",
    "03_ukupacha/arje/compat/arje-polkit-compat",
    "03_ukupacha/arje/compat/arje-resolved-compat",
    "03_ukupacha/arje/compat/arje-systemd1-compat",
    "03_ukupacha/arje/compat/arje-timedated-compat",
    "03_ukupacha/arje/compat/arje-timer-compat",
    "03_ukupacha/arje/compat/arje-tmpfiles-compat",
    "03_ukupacha/arje/init/arje-absorb",
    "03_ukupacha/arje/init/arje-incarnate",
    "03_ukupacha/arje/init/arje-installer",
    "03_ukupacha/arje/init/arje-kernel",
    "03_ukupacha/arje/init/arje-net-bring-up",
    "03_ukupacha/arje/init/arje-packager",
    "03_ukupacha/arje/init/arje-snapshot",
    "03_ukupacha/arje/init/arje-soma",
    "03_ukupacha/arje/init/arje-zero",
    "03_ukupacha/arje/runtime/arje-brain",
    "03_ukupacha/arje/runtime/arje-brain-audit",
    "03_ukupacha/arje/runtime/arje-brain-cognitive",
    "03_ukupacha/arje/runtime/arje-brain-rules",
    "03_ukupacha/arje/runtime/arje-bus",
    "03_ukupacha/arje/runtime/arje-cas",
    "03_ukupacha/arje/runtime/arje-echo",
    "03_ukupacha/arje/runtime/arje-wasm",
    "03_ukupacha/minga/minga-cli",
    "03_ukupacha/minga/minga-core",
    "03_ukupacha/minga/minga-dht",
    "03_ukupacha/minga/minga-explorer-llimphi",
    "03_ukupacha/minga/minga-p2p",
    "03_ukupacha/minga/minga-store",
    "03_ukupacha/minga/minga-vfs",
    "03_ukupacha/wawa-explorer/wawa-explorer-aoe",
    "03_ukupacha/wawa-explorer/wawa-explorer-core",
    "03_ukupacha/wawa-explorer/wawa-explorer-llimphi",
    "shared/auth/auth-core",
    "shared/card/card-admin",
    "shared/card/card-core",
    "shared/card/card-discovery",
    "shared/card/card-handshake",
    "shared/card/card-net",
    "shared/card/card-sidecar",
    "shared/card/card-wit",
    "shared/card/cards",
    "shared/format",
    "shared/sandokan/sandokan",
    "shared/sandokan/sandokan-app",
    "shared/sandokan/sandokan-core",
    "shared/sandokan/sandokan-daemon",
    "shared/sandokan/sandokan-lifecycle",
    "shared/sandokan/sandokan-local",
    "shared/sandokan/sandokan-remote",
    "shared/ssh",
    "web/gioser-canvas-web",
    "web/gioser-geom",
    "web/gioser-graph-web",
    "web/gioser-palette",
    "web/gioser-physics",
    "web/gioser-shaders",
    "web/gioser-web",
]

# `wawa/` se excluye del workspace global porque corre en target
# `x86_64-unknown-none` y `panic = "abort"`, incompatibles con los
# perfiles globales. Los crates compartidos se referencian por `path`
# cruzando la frontera.
exclude = ["03_ukupacha/wawa"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Sergio <gerencia@jlsoltech.com>"]
publish = false
repository = "https://gitea.gioser.net/sergio/gioser"

[workspace.dependencies]
# === Serialización ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
serde-big-array = "0.5"
postcard = { version = "1", features = ["use-std"] }
toml = "0.8"
ron = "0.8"
bincode = "1"
base64 = "0.22"

# === Errores ===
thiserror = "2"           # bump uniforme; arje (era 1) puede requerir ajustes menores
anyhow = "1"

# === Async ===
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# === Observabilidad ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# === Linux primitives (arje) ===
nix = { version = "0.29", features = ["signal", "process", "sched", "mount", "fs", "socket", "net", "user"] }
libc = "0.2"

# === IDs / Hash / Crypto ===
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# === WASM (arje) ===
# wasmi 1.0: unifica la versión con renaser (su kernel ya corre 1.0), para
# que el ABI WASM del host sea idéntico en Linux y en bare-metal.
wasmi = "1.0"
wat = "1"

# === Storage / DB ===
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# === P2P (minga) ===
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "macros", "kad", "identify"] }
libp2p-stream = "=0.4.0-alpha"
libp2p-allow-block-list = "0.6"

# === SSH (ssh, sandokan RemoteEngine, matilda) ===
russh = "0.54"

# === Math determinista cross-platform (dominium) ===
libm = "0.2"

# === Code parsing (minga) ===
arboard = "3"
ropey = "1.6"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"

# === FS notify ===
notify = "6.1"

# === Grafos (iniy, nakui-core ya lo usa directo en 0.6) ===
petgraph = "0.6"

# === Image decoding (nahual-image-viewer-llimphi) ===
# default-features = false: nos quedamos con PNG + JPEG, que es el 95%
# de los formatos en el wild. WebP/AVIF/etc. los habilitamos si una app
# los pide específicamente.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# === FUSE (minga-vfs) ===
# default-features = false: prescinde de pkg-config/libfuse-dev en build.
# El montaje pasa a ser Rust puro (vía el helper `fusermount3` en runtime).
fuser = { version = "0.15", default-features = false }

# === CLI / auth (minga) ===
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# === PAM (auth-core) ===
pam = "0.8"

# === D-Bus (arje compat) ===
zbus = { version = "4", default-features = false, features = ["tokio"] }

# === Tests ===
tempfile = "3"

# === Llimphi (motor gráfico soberano) ===
# wgpu sobre Vulkan/Metal/DX12, winit para ventana en dev Linux.
# raw-window-handle 0.6 alinea winit 0.30 con wgpu 24.
# vello 0.5 = rasterizador vectorial sobre wgpu 24.
# taffy 0.9 = motor Flexbox/Grid puro Rust (ya pulled por transitivos, lo alineamos).
# parley 0.2 = shaping/layout de texto compatible con peniko 0.4 (que vello 0.5 expone).
wgpu = "24"
winit = "0.30"
raw-window-handle = "0.6"
pollster = "0.4"
vello = "0.5"
taffy = "0.9"
# parley = shaping completo (bidi, ligatures, fallback CJK/emoji vía fontique, line break).
parley = "0.4"
# Bucle Elm (input→update→view→layout→raster→present). Lo consumen las apps.
llimphi-ui = { path = "02_ruway/llimphi/llimphi-ui" }
# Paleta semántica compartida por las apps y los widgets.
llimphi-theme = { path = "02_ruway/llimphi/llimphi-theme" }
# Widgets reusables sobre llimphi-ui — uno por crate.
llimphi-widget-app-header = { path = "02_ruway/llimphi/widgets/app-header" }
llimphi-widget-banner = { path = "02_ruway/llimphi/widgets/banner" }
llimphi-widget-button = { path = "02_ruway/llimphi/widgets/button" }
llimphi-widget-card = { path = "02_ruway/llimphi/widgets/card" }
llimphi-widget-list = { path = "02_ruway/llimphi/widgets/list" }
llimphi-widget-slider = { path = "02_ruway/llimphi/widgets/slider" }
llimphi-widget-splitter = { path = "02_ruway/llimphi/widgets/splitter" }
llimphi-widget-stat-card = { path = "02_ruway/llimphi/widgets/stat-card" }
llimphi-widget-tabs = { path = "02_ruway/llimphi/widgets/tabs" }
llimphi-module-fif = { path = "02_ruway/llimphi/modules/fif" }
llimphi-module-file-picker = { path = "02_ruway/llimphi/modules/file-picker" }
llimphi-module-shuma-term = { path = "02_ruway/llimphi/modules/shuma-term" }
llimphi-plugin-host = { path = "02_ruway/llimphi/modules/plugin-host" }
llimphi-widget-theme-switcher = { path = "02_ruway/llimphi/widgets/theme-switcher" }
llimphi-widget-text-area = { path = "02_ruway/llimphi/widgets/text-area" }
llimphi-widget-text-editor = { path = "02_ruway/llimphi/widgets/text-editor" }
llimphi-widget-text-editor-lsp = { path = "02_ruway/llimphi/widgets/text-editor-lsp" }
llimphi-widget-text-input = { path = "02_ruway/llimphi/widgets/text-input" }
llimphi-widget-tiled = { path = "02_ruway/llimphi/widgets/tiled" }
llimphi-widget-tree = { path = "02_ruway/llimphi/widgets/tree" }

# === Filesystem helpers ===
directories = "5"

# === Fuzzy matching (shuma-history) ===
# nucleo-matcher = mismo matcher que helix-editor: rápido, Unicode-correct,
# bonus por prefijos, ranking estable. La versión 0.3 expone el API simple
# que necesitamos (Matcher + Pattern + score).
nucleo-matcher = "0.3"

# === Transporte autenticado (shuma-link) ===
# snow = framework Noise pure-rust. Lo usamos en modo Noise_XK (cliente
# conoce la pubkey del servidor, server descubre la del cliente y la
# valida contra una allowlist). ChaCha20-Poly1305 + X25519 + BLAKE2s.
# La versión 0.9 viene pinneada por libp2p, así nos alineamos.
snow = "0.9"
hex = "0.4"

# === PTY + emulador de terminal (shuma-exec, módulos REPL) ===
# portable-pty aloja un PTY cross-platform; lo usamos para los
# comandos TUI tipo vim/htop/less que necesitan un terminal de verdad.
# vt100 parsea la secuencia de bytes que el PTY emite (ANSI + cursor
# movement + erase + screen state) y mantiene un buffer de pantalla
# renderizable como grid.
portable-pty = "0.9"
vt100 = "0.16"

# === WASM web (gioser) ===
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
glam = "0.30"

# === Markdown (pluma) ===
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# ============================================================
# Intra-workspace deps de nahual (referenciadas por workspace = true)
# ============================================================
nahual-text-viewer-llimphi = { path = "02_ruway/nahual/nahual-text-viewer-llimphi" }
nahual-image-viewer-llimphi = { path = "02_ruway/nahual/nahual-image-viewer-llimphi" }
nahual-file-explorer-llimphi = { path = "02_ruway/nahual/nahual-file-explorer-llimphi" }

# ============================================================
# Intra-workspace deps de pineal (módulo de gráficos)
# ============================================================
pineal-core = { path = "00_unanchay/pineal/pineal-core" }
pineal-render = { path = "00_unanchay/pineal/pineal-render" }
pineal-cartesian = { path = "00_unanchay/pineal/pineal-cartesian" }
pineal-stream = { path = "00_unanchay/pineal/pineal-stream" }
pineal-mesh = { path = "00_unanchay/pineal/pineal-mesh" }
pineal-financial = { path = "00_unanchay/pineal/pineal-financial" }
pineal-polar = { path = "00_unanchay/pineal/pineal-polar" }
pineal-heatmap = { path = "00_unanchay/pineal/pineal-heatmap" }
pineal-treemap = { path = "00_unanchay/pineal/pineal-treemap" }
pineal-flow = { path = "00_unanchay/pineal/pineal-flow" }
pineal-phosphor = { path = "00_unanchay/pineal/pineal-phosphor" }
pineal-export = { path = "00_unanchay/pineal/pineal-export" }
pineal = { path = "00_unanchay/pineal/pineal-umbrella" }

# ============================================================
# Intra-workspace deps de iniy (laboratorio semántico de creencias)
# ============================================================
iniy-core = { path = "01_yachay/iniy/iniy-core" }
iniy-ingest = { path = "01_yachay/iniy/iniy-ingest" }
iniy-extract = { path = "01_yachay/iniy/iniy-extract" }
iniy-nli = { path = "01_yachay/iniy/iniy-nli" }
iniy-graph = { path = "01_yachay/iniy/iniy-graph" }
iniy-store = { path = "01_yachay/iniy/iniy-store" }

# === auto: declarados por crates internos faltantes ===
cosmos-coords = { path = "01_yachay/cosmos/cosmos-coords" }
cosmos-core = { path = "01_yachay/cosmos/cosmos-core" }
cosmos-ephemeris = { path = "01_yachay/cosmos/cosmos-ephemeris" }
cosmos-time = { path = "01_yachay/cosmos/cosmos-time" }
cosmos-wcs = { path = "01_yachay/cosmos/cosmos-wcs" }

# === auto: externas de eternal ===
celestial-eop-data = { version = "0.1"}
approx = "0.5"
byteorder = "1.5"
cc = "1.0"
chrono = "0.4"
crc32fast = "1.4"
criterion = "0.5"
csv = "1.4"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.18"
lz4_flex = "0.11"
memmap2 = "0.9"
mockito = "1.0"
ndarray = "0.15"
num-traits = "0.2"
once_cell = "1.19"
png = "0.18"
proptest = "1.4"
quick-xml = "0.31"
rayon = "1.8"
regex = "1.11"
reqwest = "0.12"
tiff = "0.11"
wide = "0.7"
wiremock = "0.6"
